[NOID] changes to be consistent to the latest core ones