@@ -1,12 +1,12 @@
 package apoc.schemas;
 
 import apoc.util.Neo4jContainerExtension;
+import apoc.util.TestContainerUtil;
 import org.junit.AfterClass;
 import org.junit.BeforeClass;
 import org.junit.Test;
 import org.neo4j.driver.Session;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -24,7 +24,7 @@ public class SchemasExtendedEnterpriseFeatureTest {
     @BeforeClass
     public static void beforeAll() {
         // We build the project, the artifact will be placed into ./build/libs
-        neo4jContainer = createEnterpriseDB(true);
+        neo4jContainer = createEnterpriseDB(List.of(TestContainerUtil.ApocPackage.FULL), true);
         neo4jContainer.start();
         session = neo4jContainer.getSession();
     }
@@ -38,23 +38,26 @@ public class SchemasExtendedEnterpriseFeatureTest {
     @Test
     public void testCompareIndexesAndConstraintsRelEnterprise() {
         session.writeTransaction(tx -> {
-            tx.run("CREATE CONSTRAINT foo_bar ON (f:Foo) ASSERT (f.bar,f.foo) IS NODE KEY");
-            tx.run("CREATE CONSTRAINT bar_foobar ON (bar:Bar) ASSERT exists(bar.foobar)");
-            tx.run("CREATE CONSTRAINT like_day ON ()-[like:LIKED]-() ASSERT exists(like.day)");
+            tx.run("CREATE CONSTRAINT foo_bar FOR (f:Foo) REQUIRE (f.bar,f.foo) IS NODE KEY");
+            tx.run("CREATE CONSTRAINT bar_foobar FOR (bar:Bar) REQUIRE bar.foobar IS NOT NULL");
+            tx.run("CREATE CONSTRAINT another_one_cons FOR (n:Another) REQUIRE n.one IS NOT NULL");
+            tx.run("CREATE CONSTRAINT another_two_cons FOR (n:Another) REQUIRE n.two IS NOT NULL");
+            tx.run("CREATE CONSTRAINT like_day FOR ()-[like:LIKED]-() REQUIRE like.day IS NOT NULL");
             tx.commit();
             return null;
         });
 
         session.writeTransaction(tx -> {
-            tx.run("CREATE INDEX person_surname FOR (n:Person) ON (n.surname)");
-            tx.run("CREATE INDEX rel_index_name FOR ()-[r:KNOWS]-() ON (r.since)");
+            tx.run("CREATE RANGE INDEX person_surname FOR (n:Person) ON (n.surname)");
+            tx.run("CREATE POINT INDEX another_one_idx FOR (n:Another) ON (n.one)");
+            tx.run("CREATE TEXT INDEX rel_index_name FOR ()-[r:KNOWS]-() ON (r.since)");
             tx.commit();
             return null;
         });
 
         session.writeTransaction(tx -> {
-            tx.run("CALL db.index.fulltext.createNodeIndex('fullSecondIdx', ['Person', 'Another'], ['weightProp'])");
-            tx.run("CALL db.index.fulltext.createRelationshipIndex('fullIdxRel', ['TYPE_1', 'TYPE_2'], ['alpha', 'beta'])");
+            tx.run("CREATE FULLTEXT INDEX fullIdxNode FOR (n:Person|Another) ON EACH [n.weightProp]");
+            tx.run("CREATE FULLTEXT INDEX fullIdxRel FOR ()-[r:TYPE_1|TYPE_2]-() ON EACH [r.alpha, r.beta]");
             tx.commit();
             return null;
         });
@@ -68,66 +71,54 @@ public class SchemasExtendedEnterpriseFeatureTest {
             row = res.next();
             assertEquals("Another", row.get("label"));
             assertEquals(Map.of(":[Another, Person],(weightProp)", List.of("weightProp")), row.get("onlyIdxProps"));
-            assertEquals(Collections.emptyMap(), row.get("onlyConstraintsProps"));
-            assertEquals(Collections.emptyList(), row.get("commonProps"));
+            assertEquals(Map.of(":Another(two)", List.of("two")), row.get("onlyConstraintsProps"));
+            assertEquals(List.of("one"), row.get("commonProps"));
             row = res.next();
             assertEquals("Bar", row.get("label"));
-            assertEquals(Collections.emptyMap(), row.get("onlyIdxProps"));
+            assertEquals(emptyMap(), row.get("onlyIdxProps"));
             assertEquals(Map.of(":Bar(foobar)", List.of("foobar")), row.get("onlyConstraintsProps"));
-            assertEquals(Collections.emptyList(), row.get("commonProps"));
+            assertEquals(emptyList(), row.get("commonProps"));
             row = res.next();
             assertEquals("Foo", row.get("label"));
-            assertEquals(Collections.emptyMap(), row.get("onlyIdxProps"));
-            assertEquals(Collections.emptyMap(), row.get("onlyConstraintsProps"));
+            assertEquals(emptyMap(), row.get("onlyIdxProps"));
+            assertEquals(emptyMap(), row.get("onlyConstraintsProps"));
             assertEquals(List.of("bar", "foo"), row.get("commonProps"));
             row = res.next();
             assertEquals("Person", row.get("label"));
             assertEquals(Map.of(":[Another, Person],(weightProp)", List.of("weightProp"), ":Person(surname)", List.of("surname")), row.get("onlyIdxProps"));
-            assertEquals(Collections.emptyMap(), row.get("onlyConstraintsProps"));
-            assertEquals(Collections.emptyList(), row.get("commonProps"));
+            assertEquals(emptyMap(), row.get("onlyConstraintsProps"));
+            assertEquals(emptyList(), row.get("commonProps"));
             assertFalse(res.hasNext());
         });
+
         testResult(session, "CALL apoc.schema.relationship.compareIndexesAndConstraints()", (res) -> {
             Map<String, Object> row = res.next();
-            assertEquals("<any-types>", row.get("type"));
+            assertEquals("<any-types>", row.get("relationshipType"));
             assertEquals(Map.of(":<any-types>()", emptyList()), row.get("onlyIdxProps"));
             assertEquals(emptyMap(), row.get("onlyConstraintsProps"));
             assertEquals(emptyList(), row.get("commonProps"));
             row = res.next();
-            assertEquals("KNOWS", row.get("type"));
+            assertEquals("KNOWS", row.get("relationshipType"));
             assertEquals(Map.of(":KNOWS(since)", List.of("since")), row.get("onlyIdxProps"));
-            assertEquals(Collections.emptyMap(), row.get("onlyConstraintsProps"));
-            assertEquals(Collections.emptyList(), row.get("commonProps"));
+            assertEquals(emptyMap(), row.get("onlyConstraintsProps"));
+            assertEquals(emptyList(), row.get("commonProps"));
             row = res.next();
-            assertEquals("RELATIONSHIP_PROPERTY_EXISTENCE", row.get("type"));
-            assertEquals(Collections.emptyMap(), row.get("onlyIdxProps"));
+            assertEquals("LIKED", row.get("relationshipType"));
+            assertEquals(emptyMap(), row.get("onlyIdxProps"));
             assertEquals(Map.of("CONSTRAINT ON ()-[liked:LIKED]-() ASSERT (liked.day) IS NOT NULL", List.of("day")), row.get("onlyConstraintsProps"));
-            assertEquals(Collections.emptyList(), row.get("commonProps"));
+            assertEquals(emptyList(), row.get("commonProps"));
             row = res.next();
-            assertEquals("TYPE_1", row.get("type"));
+            assertEquals("TYPE_1", row.get("relationshipType"));
             assertEquals(Map.of(":[TYPE_1, TYPE_2],(alpha,beta)", List.of("alpha", "beta")), row.get("onlyIdxProps"));
-            assertEquals(Collections.emptyMap(), row.get("onlyConstraintsProps"));
-            assertEquals(Collections.emptyList(), row.get("commonProps"));
+            assertEquals(emptyMap(), row.get("onlyConstraintsProps"));
+            assertEquals(emptyList(), row.get("commonProps"));
             row = res.next();
-            assertEquals("TYPE_2", row.get("type"));
+            assertEquals("TYPE_2", row.get("relationshipType"));
             assertEquals(Map.of(":[TYPE_1, TYPE_2],(alpha,beta)", List.of("alpha", "beta")), row.get("onlyIdxProps"));
-            assertEquals(Collections.emptyMap(), row.get("onlyConstraintsProps"));
-            assertEquals(Collections.emptyList(), row.get("commonProps"));
+            assertEquals(emptyMap(), row.get("onlyConstraintsProps"));
+            assertEquals(emptyList(), row.get("commonProps"));
             assertFalse(res.hasNext());
         });
-
-        session.writeTransaction(tx -> {
-            tx.run("DROP CONSTRAINT foo_bar");
-            tx.run("DROP CONSTRAINT bar_foobar");
-            tx.run("DROP CONSTRAINT like_day");
-            tx.run("DROP INDEX fullSecondIdx");
-            tx.run("DROP INDEX fullIdxRel");
-            tx.run("DROP INDEX rel_index_name");
-            tx.run("DROP INDEX person_surname");
-            tx.commit();
-            return null;
-        });
-
     }
 
 }
